# flow-analysis

./: CMakeLists.txt  README.md  build_options.h.in
Correct/: CorrectionTask.cpp
Correlate/: CorrelationTask.cpp
Interface/ALICEAOD/: CMakeLists.txt
Interface/ALICEReducedEvent/: CMakeLists.txt
